assets/styles.css
/* ... */
    .content article header .excerpt h1 {
		  text-align: center;
		  font-size: 75px;
        color: white;
		  padding: 15px 0 14px;
	 }

    .content article header .excerpt p {
		  text-align: center;
		  font-size: 30px;
        color: white;
 }


.social {
	text-align:center
}

.social {
	font-size: 32px;
	text-decoration: none;
	list-style-type: none;
	color: #1abc9c; 
	padding-bottom: 100px;
}

.social a {
	padding-left: 5px;
	padding-right: 5px;
	color: #ecf0f1;
}

.social > a:hover {
	color: #c0392b; 
}
        .content article header .excerpt h1 a { color: white }

    .content article header .excerpt p { margin: 10px 0 }

    .content article header .excerpt .meta { font-size: 0.875rem }

.content article header:hover .excerpt {
    -webkit-transform: translate3d(0, 12px, 0);
    -moz-transform: translate3d(0, 12px, 0);
    -o-transform: translate3d(0, 12px, 0);
    transform: translate3d(0, 12px, 0);
    -webkit-transition: all 0.4s ease-in-out;
    -moz-transition: all 0.4s ease-in-out;
    -o-transition: all 0.4s ease-in-out;
    transition: all 0.4s ease-in-out; }

.main-title h1 {

    font-size: 200%;
    margin: auto;

}

.content article header .scroll {
    display: none;
    position: absolute;
    bottom: 34px;
    left: 50%;
    margin-left: -17px;
    z-index: 900; }

.content article header .scroll:active { bottom: 33px }

/* Article Body */
.content article .body { padding: 68px 0 34px }

    .content article .body .more {
        display: block;
        background: url(buttons-dark.svg) no-repeat -6px -11px;
        background-size: 100px 34px;
        margin: 10px 0 0; }

    .content article .body .more:active { background-position: -6px -10px }

    .content article .body .summary { padding-bottom: 15px; }

        .content article .body .summary:last-of-type { padding-bottom: 0; }

    .content article .body .media {
        background-size: 72px 72px;
        background-repeat: no-repeat;
        background-position: center;
        position: relative;
        min-height: 150px;
        height: auto;
        margin: 68px -81px; }

        .content article .body .summary .media { margin-top: 34px; }

    .content article .body .media.image { background-image: url(placeholder-image.svg) }

        .content article .body .media.image img {
            display: block;
            width: 100%;
            height: auto; }

    .content article .body .media.youtube iframe, .content article .body .media.vimeo iframe, .content article .body .media.audio iframe {
        display: block;
        width: 796px;
        height: 448px;
        border: none; }

    .content article .body .media.youtube { background-image: url(placeholder-youtube.svg) }

    .content article .body .media.vimeo { background-image: url(placeholder-vimeo.svg) }

    .content article .body .media.audio { background-image: url(placeholder-audio.svg) }

        .content article .body .media.audio iframe {
            width: 100%;
            height: 166px; }

    .content article .body .media .caption {
        position: absolute;
        width: 224px;
        top: 0;
        right: -246px; }

        .content article .body .media .caption h4 { padding: 0 }

        .content article .body .media .caption p, .content article .body .media .caption a {
            font-size: 0.875rem;
            line-height: 1.75; }

        .content article .body .media .caption p {
            position: relative;
            margin: 10px 0 18px; }

        .content article .body .media .caption p:after {
            content: "";
            display: block;
            width: 18px;
            height: 1px;
            position: absolute;
            left: 0;
            bottom: -11px;
            background: #eb2344; }

        .content article .body .media .caption a { color: #4b505a }

        .content article .body .media .caption a.icon.image:before { background-position: -198px 0 }

        .content article .body .media .caption a.icon.video:before { background-position: -216px 0 }

        .content article .body .media .caption a.icon.audio:before { background-position: -234px 0 }

        .content article .body .media .caption a:hover { color: #191a1a }

/* Article Footer incl. Author Information, Share Options, Comments & Pagination */
.content article footer .author, .content article footer .share, .content article footer .comments { font-size: 0.875rem }

    .content article footer .author ul, .content article footer .share ul, .content article footer .comments ul { padding: 0 }

        .content article footer .author ul li, .content article footer .share ul li, .content article footer .comments ul li { list-style: none }

.content article footer .meta { padding-bottom: 68px }

.content article footer .meta:after {
    content: "";
    display: table;
    clear: both; }

.content article footer .author {
    width: 388px;
    float: left; }

    .content article footer .author h4 { padding: 15px 0 0 }

    .content article footer .author p { line-height: 1.625rem }

    .content article footer .author ul {
        margin: 0;
        padding-top: 10px; }

    .content article footer .author ul:after {
        content: "";
        display: table;
        clear: both; }

    .content article footer .author ul li {
        float: left;
        margin-right: 10px; }

        .content article footer .author ul li a {
            display: block;
            width: 18px;
            height: 18px;
            text-indent: -9999px; }

        .content article footer .author ul li a.icon { padding: 0 }
        
        .content article footer .author ul li a.icon.twitter:before { background-position: 0 0 }

        .content article footer .author ul li a.icon.facebook:before { background-position: -18px 0 }

        .content article footer .author ul li a.icon.google:before { background-position: -36px 0 }

        .content article footer .author ul li a.icon.linkedin:before { background-position: -54px 0 }
/* ... */

